# nfe-prompt-gpt

./: .gitignore  README.md  pyproject.toml
notebook/: nfe-notebook.ipynb
scripts/: main.py
