[tool.poetry]
name = "scripts"
version = "0.1.0"
description = ""
authors = ["Andre Luiz Monteiro da Rocha <andrecorumba@gmail.com>"]
license = "MIT Licence"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11,<3.13"
pandas = "^2.1.2"
openai = "^1.1.2"
python-dotenv = "^1.0.0"
pyarrow = "^14.0.1"
fastparquet = "^2023.10.1"


[tool.poetry.group.dev.dependencies]
ipykernel = "^6.26.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
